--- a/src/pages/InvestorDashboardScreen/InvestorDashboardScreen.scss
+++ b/src/pages/InvestorDashboardScreen/InvestorDashboardScreen.scss
@@ -28,7 +28,7 @@
 				&_detailbox {
 					@apply py-3;
 					&_key {
-						@apply text-greyText pb-1 font-bold text-caption-3 leading-caption-4 tablet:text-caption-3 tablet:leading-caption-3 desktop:text-caption-1 desktop:leading-caption-1 opacity-50 font-semibold;
+						@apply text-grayText pb-1 font-bold text-caption-3 leading-caption-4 tablet:text-caption-3 tablet:leading-caption-3 desktop:text-caption-1 desktop:leading-caption-1 opacity-50 font-semibold;
 					}
 					&_value {
 						@apply text-darkText font-semibold text-caption-2 leading-caption-3 tablet:text-caption-2 tablet:leading-caption-2 desktop:text-paragraph-2 desktop:leading-paragraph-2;
